Fix other elements shifting when hovering on changeGridSize button

--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ header {
   border-radius: 8px;
 }
 
+.change-size:hover {
+  cursor: pointer;
+  background-color: #212529;
+  color: #f8f9fa;
+}
+
 .sidebar label {
   font-size: 24px;
 }
@@ -77,13 +83,6 @@ header {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.change-size:hover {
-  cursor: pointer;
-  background-color: #212529;
-  border-radius: 8px;
-  border: 5px solid #adb5bd;
 }
 
 footer {
